; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/mach-at32ap/extr_pio.c_gpio_to_pio.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/mach-at32ap/extr_pio.c_gpio_to_pio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pio_device = type { i32 }

@MAX_NR_PIO_DEVICES = common dso_local global i32 0, align 4
@pio_dev = common dso_local global %struct.pio_device* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pio_device* (i32)* @gpio_to_pio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pio_device* @gpio_to_pio(i32 %0) #0 {
  %2 = alloca %struct.pio_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.pio_device*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = lshr i32 %6, 5
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @MAX_NR_PIO_DEVICES, align 4
  %10 = icmp uge i32 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store %struct.pio_device* null, %struct.pio_device** %2, align 8
  br label %24

12:                                               ; preds = %1
  %13 = load %struct.pio_device*, %struct.pio_device** @pio_dev, align 8
  %14 = load i32, i32* %5, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds %struct.pio_device, %struct.pio_device* %13, i64 %15
  store %struct.pio_device* %16, %struct.pio_device** %4, align 8
  %17 = load %struct.pio_device*, %struct.pio_device** %4, align 8
  %18 = getelementptr inbounds %struct.pio_device, %struct.pio_device* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %12
  store %struct.pio_device* null, %struct.pio_device** %2, align 8
  br label %24

22:                                               ; preds = %12
  %23 = load %struct.pio_device*, %struct.pio_device** %4, align 8
  store %struct.pio_device* %23, %struct.pio_device** %2, align 8
  br label %24

24:                                               ; preds = %22, %21, %11
  %25 = load %struct.pio_device*, %struct.pio_device** %2, align 8
  ret %struct.pio_device* %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
